# weigh-graph

./: CMakeLists.txt  LICENSE.txt  README.md  config.h.cmake
cmake/Modules/: Findrcpr.cmake
include/weightgraph/: status_codes.h  weightgraph.h
src/main/: main.c  main_internal.h  main_parse_buffer.c  main_read_file.c  output_graph_create.c  output_graph_finalize.c  output_graph_plot.c  output_graph_resource_release.c
src/weightgraph/: weightgraph_create.c  weightgraph_entry_compare.c  weightgraph_entry_create.c  weightgraph_entry_key.c  weightgraph_entry_resource_release.c  weightgraph_resource_release.c
